--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 }
 
 
+
+
 html {
     scroll-behavior: smooth;
   }
@@ -31,6 +33,17 @@ body{
     background-attachment:fixed;
 } */
 
+
+
+
+#header nav img{
+    width:220px;
+    height:70px;
+    margin: 2px;
+    box-shadow: 0px 0px 5px rgb(248, 247, 247, 1.9);
+
+
+}
 
 #header .container {
     max-width: 1280px;
@@ -128,7 +141,7 @@ body{
 }
 
 .right-half img:hover {
-    box-shadow: 0px 0px 5px rgb(248, 247, 247);
+    box-shadow: 0px 0px 5px rgb(248, 247, 247, 10);
     transform: scale(1.02);
 }
 
