--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body{
 .logo{
     width:150px;
     height:70px;
-    margin-left: 10px;
+    margin: 10px;
     border: white solid 1px;
     box-shadow: 0px 0px 5px rgb(248, 247, 247, 1.9);
 
