--- a/style.css
+++ b/style.css
@@ -475,7 +475,7 @@ color:#ff004f;
     background-color: var(--card-bg);
     padding: 1.0rem; */
     border-radius: 4px;
-/* }
+}
 
 
 /* changes for about nav */
