--- a/style.css
+++ b/style.css
@@ -473,8 +473,8 @@ color:#ff004f;
     justify-content: center;
     gap: 12rem;
     background-color: var(--card-bg);
-    padding: 1.0rem; */
-    border-radius: 4px;
+    padding: 1.0rem; 
+    border-radius : 4px;
 }
 
 
