--- a/style.css
+++ b/style.css
@@ -24,6 +24,22 @@ body{
 
 }
 
+
+#canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    pointer-events: none;
+}
+.content {
+    position: relative;
+    z-index: 2;
+    color: white;
+}
+
+
+
 /* #header{
     width:100%;
     height:100vh;
