--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ body{
     font-size: 48px;
     font-weight: bold;
 
-    text-shadow: -1px -1px 0 #ff0303, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+    text-shadow: -1px -1px 0 yellow, 1px -1px 0 rgb(153, 255, 0), -1px 1px 0 orangered, 1px 1px 0 red;
     color: #ffffff;
     line-height: 1.2;
     margin-bottom: 10px;
@@ -164,6 +164,7 @@ body{
 
 .left-half span {
     color:#ff004f;
+    text-shadow: -1px -1px 0 #ffffff, 1px -1px 0 #ffffff, -1px 1px 0 #ffffff, 1px 1px 0 #ffffff;
 }
 
 .left-half .description {
