--- a/style.css
+++ b/style.css
@@ -205,12 +205,13 @@ body{
     max-width: 100%;
     height: auto;
     border-radius: 8px;
+    border: solid 1px white;
     /* box-shadow: -2px 2px 2px rgb(248, 247, 247); */
     transition: transform 0.3s;
 }
 
 .right-half img:hover {
-    box-shadow: 0px 0px 5px rgb(248, 247, 247, 10);
+    box-shadow: 0px 0px 10px rgb(248, 247, 247, 20);
     transform: scale(1.02);
 }
 
