--- a/style.css
+++ b/style.css
@@ -746,11 +746,12 @@ color:#ff004f;
 .timeline::before {
     content: '';
     position: absolute;
-    left: 0;
+    color: white;
+    left: 6.5px;
     top: 0;
     height: 100%;
     width: 2px;
-    background: var(--timeline-color);
+    background: white;
 }
 
 .timeline-item {
@@ -793,7 +794,7 @@ color:#ff004f;
     height: 12px;
     border-radius: 50%;
     background: var(--primary-color);
-    border: 2px solid var(--bg-color);
+    border: 2px solid rgb(255, 255, 255);
 }
 
 .timeline-item h3 {
