--- a/style.css
+++ b/style.css
@@ -763,6 +763,19 @@ color:#ff004f;
     box-shadow: 2px 2px 2px rgba(255, 255, 255, 0.4);
 }
 
+.timeline-item h3 ::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height:5px;
+    background-color: white;
+    top: 0;
+    left: 0;
+    color: white;
+    
+
+}
+
 
 /* .achievement {
     background-color: #2b2b2b;
