--- a/style.css
+++ b/style.css
@@ -1004,7 +1004,7 @@ color:#ff004f;
     position: relative;
   }
   
-  .timeline {
+  .achievement-timeline {
     position: relative;
     padding-left: 40px;
   }
