--- a/style.css
+++ b/style.css
@@ -1017,7 +1017,7 @@ color:#ff004f;
     top: 0;
     bottom: 0;
     width: 2px;
-    background: #ff004f;
+    background: #ffffff;
   }
   
   .achievement-line {
@@ -1045,7 +1045,7 @@ color:#ff004f;
     top: 29px;
     width: 40px;
     height: 2px;
-    background: #ff004f;
+    background: #ffffff;
   }
   
   .achievement {
